@@ -8,6 +8,6 @@ plan skip_all => 'Test::Pod::Coverage 1.04 required for this test!'
   unless eval 'use Test::Pod::Coverage 1.04; 1';
 
 # DEPRECATED in Tiger Face!
-my @tiger = qw(pluck siblings val);
+my @tiger = qw(siblings);
 
 all_pod_coverage_ok({also_private => [@tiger]});
